python-app/k8s/python-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
  labels:
    app: python-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app-pod
  template:
    metadata:
      labels:
        app: python-app-pod
    spec:
      containers:
        - name: python-app
          imagePullPolicy: IfNotPresent
          image: python-app:dev  # LOCAL image name
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  type: ClusterIP
  selector:
    app: python-app-pod
  ports:
    - port: 8000
      targetPort: 8000  # Container port where your Python app runs
      protocol: TCP
